// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display pre selected shipping method as selected option on page load 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {
        "collapsed": true,
        "completed": true,
      },
      "shippingMethod": Object {
        "collapsed": false,
        "delivery_date": "Sunday 2nd December",
        "id": "1",
        "name": "Super Saver",
        "paid_price_inc_tax": 3.45,
        "reference": "super_saver",
        "retail_price_inc_tax": 3.45,
        "sku": "super_saver",
        "tax_amount": 2,
        "tax_percentage": 20,
      },
    }
  }
  setShippingMethod={[Function]}
  state={
    Object {
      "shippingMethods": Array [
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "1",
          "name": "Super Saver",
          "paid_price_inc_tax": 3.45,
          "reference": "super_saver",
          "retail_price_inc_tax": 3.45,
          "sku": "super_saver",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "name": "UPS Next Day",
          "paid_price_inc_tax": 5.45,
          "reference": "ups_next_day",
          "retail_price_inc_tax": 5.45,
          "sku": "ups_next_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "name": "UPS Next Day Before Noon",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_next_day_before_noon",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_next_day_before_noon",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "4",
          "name": "UPS Same Day",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_same_day",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_same_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Your Shipping Method
        </h2>
      </div>
      <div>
        <undefined />
      </div>
    </div>
    <div>
      <undefined />
    </div>
    <div>
      <form
        className="o-form__wrapper c-shipping-method-list"
      >
        <div
          className="c-shipping-method-list__header u-bold"
        >
          📍 Shipping from ...
          <span
            className="c-shipping-method-list__item-count"
          >
            undefined items
          </span>
        </div>
        <div>
          <div
            aria-label="super_saver"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="1"
            onClick={[Function]}
          >
            <input
              checked={true}
              id="super_saver_1"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="super_saver"
            />
            <label
              htmlFor="super_saver"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                3.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                Super Saver
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="2"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_2"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day"
            />
            <label
              htmlFor="ups_next_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                5.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day_before_noon"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="3"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_before_noon_3"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day_before_noon"
            />
            <label
              htmlFor="ups_next_day_before_noon"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day Before Noon
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_same_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="4"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_same_day_4"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_same_day"
            />
            <label
              htmlFor="ups_same_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Same Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
        </div>
        <div
          className="o-form__input-group"
        >
          <Button
            aria-label="Continue to payment"
            label="Continue to Payment"
            onClick={[Function]}
            size="lrg"
            status="primary"
            type="submit"
          >
            <button
              aria-label="Continue to payment"
              className="o-button o-button--primary o-button--lrg"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
              type="submit"
            >
              Continue to Payment
            </button>
          </Button>
        </div>
      </form>
    </div>
  </div>
</ShippingMethods>
`;

exports[`render collapsed view as expected 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [
        Object {
          "id": "1",
        },
      ],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {
        "collapsed": true,
        "completed": true,
      },
      "shippingMethod": Object {
        "collapsed": true,
        "delivery_date": "Sunday 2nd December",
        "id": "1",
        "name": "Super Saver",
        "paid_price_inc_tax": 3.45,
        "reference": "super_saver",
        "retail_price_inc_tax": 3.45,
        "sku": "super_saver",
        "tax_amount": 2,
        "tax_percentage": 20,
      },
    }
  }
  state={Object {}}
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Your Shipping Method
        </h2>
      </div>
      <div>
        <Button
          aria-label="Edit your shipping method"
          label="Edit"
          onClick={[Function]}
          size="lrg"
        >
          <button
            aria-label="Edit your shipping method"
            className="o-button o-button--primary o-button--lrg"
            disabled={false}
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            Edit
          </button>
        </Button>
      </div>
    </div>
    <div>
      <div
        className="o-form__wrapper"
      >
        <p
          className="u-bold"
        >
          Super Saver
        </p>
        <p>
          <span
            className="u-bold"
          >
            Estimated Delivery
          </span>
          : 
          Sunday 2nd December
        </p>
      </div>
    </div>
    <div>
      <undefined />
    </div>
  </div>
</ShippingMethods>
`;

exports[`render shipping methods as expected 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [
        Object {
          "id": "1",
        },
      ],
      "totalQuantity": 1,
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {
        "collapsed": true,
        "completed": true,
      },
      "shippingMethod": Object {},
    }
  }
  setShippingMethod={[Function]}
  state={
    Object {
      "collapsed": false,
      "shippingMethods": Array [
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "1",
          "name": "Super Saver",
          "paid_price_inc_tax": 3.45,
          "reference": "super_saver",
          "retail_price_inc_tax": 3.45,
          "sku": "super_saver",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "name": "UPS Next Day",
          "paid_price_inc_tax": 5.45,
          "reference": "ups_next_day",
          "retail_price_inc_tax": 5.45,
          "sku": "ups_next_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "name": "UPS Next Day Before Noon",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_next_day_before_noon",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_next_day_before_noon",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "4",
          "name": "UPS Same Day",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_same_day",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_same_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Your Shipping Method
        </h2>
      </div>
      <div />
    </div>
    <div />
    <div>
      <form
        className="o-form__wrapper c-shipping-method-list"
      >
        <div
          className="c-shipping-method-list__header u-bold"
        >
          📍 Shipping from ...
          <span
            className="c-shipping-method-list__item-count"
          >
            1 item
          </span>
        </div>
        <div>
          <div
            aria-label="super_saver"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="1"
            onClick={[Function]}
          >
            <input
              checked={true}
              id="super_saver_1"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="super_saver"
            />
            <label
              htmlFor="super_saver"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                3.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                Super Saver
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="2"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_2"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day"
            />
            <label
              htmlFor="ups_next_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                5.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day_before_noon"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="3"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_before_noon_3"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day_before_noon"
            />
            <label
              htmlFor="ups_next_day_before_noon"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day Before Noon
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_same_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="4"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_same_day_4"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_same_day"
            />
            <label
              htmlFor="ups_same_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Same Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
        </div>
        <div
          className="o-form__input-group"
        >
          <Button
            aria-label="Continue to payment"
            label="Continue to Payment"
            onClick={[Function]}
            size="lrg"
            status="primary"
            type="submit"
          >
            <button
              aria-label="Continue to payment"
              className="o-button o-button--primary o-button--lrg"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
              type="submit"
            >
              Continue to Payment
            </button>
          </Button>
        </div>
      </form>
    </div>
  </div>
</ShippingMethods>
`;

exports[`renders line item quantity as expected 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [],
      "totalQuantity": 0,
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {
        "collapsed": true,
        "completed": true,
      },
      "shippingMethod": Object {
        "collapsed": false,
      },
    }
  }
  setShippingMethod={[Function]}
  state={
    Object {
      "shippingMethods": Array [
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "1",
          "name": "Super Saver",
          "paid_price_inc_tax": 3.45,
          "reference": "super_saver",
          "retail_price_inc_tax": 3.45,
          "sku": "super_saver",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "name": "UPS Next Day",
          "paid_price_inc_tax": 5.45,
          "reference": "ups_next_day",
          "retail_price_inc_tax": 5.45,
          "sku": "ups_next_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "name": "UPS Next Day Before Noon",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_next_day_before_noon",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_next_day_before_noon",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "4",
          "name": "UPS Same Day",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_same_day",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_same_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Your Shipping Method
        </h2>
      </div>
      <div>
        <undefined />
      </div>
    </div>
    <div>
      <undefined />
    </div>
    <div>
      <form
        className="o-form__wrapper c-shipping-method-list"
      >
        <div
          className="c-shipping-method-list__header u-bold"
        >
          📍 Shipping from ...
          <span
            className="c-shipping-method-list__item-count"
          >
            0 items
          </span>
        </div>
        <div>
          <div
            aria-label="super_saver"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="1"
            onClick={[Function]}
          >
            <input
              checked={true}
              id="super_saver_1"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="super_saver"
            />
            <label
              htmlFor="super_saver"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                3.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                Super Saver
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="2"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_2"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day"
            />
            <label
              htmlFor="ups_next_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                5.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day_before_noon"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="3"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_before_noon_3"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day_before_noon"
            />
            <label
              htmlFor="ups_next_day_before_noon"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day Before Noon
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_same_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="4"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_same_day_4"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_same_day"
            />
            <label
              htmlFor="ups_same_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Same Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
        </div>
        <div
          className="o-form__input-group"
        >
          <Button
            aria-label="Continue to payment"
            label="Continue to Payment"
            onClick={[Function]}
            size="lrg"
            status="primary"
            type="submit"
          >
            <button
              aria-label="Continue to payment"
              className="o-button o-button--primary o-button--lrg"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
              type="submit"
            >
              Continue to Payment
            </button>
          </Button>
        </div>
      </form>
    </div>
  </div>
</ShippingMethods>
`;

exports[`should be able to select a shipping method 1`] = `
<ShippingMethods
  cart={
    Object {
      "lineItems": Array [],
    }
  }
  checkout={
    Object {
      "shippingAddress": Object {
        "collapsed": true,
        "completed": true,
      },
      "shippingMethod": Object {
        "collapsed": false,
      },
    }
  }
  setShippingMethod={[Function]}
  state={
    Object {
      "selectedShippingMethod": "",
      "shippingMethods": Array [
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "1",
          "name": "Super Saver",
          "paid_price_inc_tax": 3.45,
          "reference": "super_saver",
          "retail_price_inc_tax": 3.45,
          "sku": "super_saver",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "2",
          "name": "UPS Next Day",
          "paid_price_inc_tax": 5.45,
          "reference": "ups_next_day",
          "retail_price_inc_tax": 5.45,
          "sku": "ups_next_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "3",
          "name": "UPS Next Day Before Noon",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_next_day_before_noon",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_next_day_before_noon",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
        Object {
          "delivery_date": "Sunday 2nd December",
          "id": "4",
          "name": "UPS Same Day",
          "paid_price_inc_tax": 8.45,
          "reference": "ups_same_day",
          "retail_price_inc_tax": 8.45,
          "sku": "ups_same_day",
          "tax_amount": 2,
          "tax_percentage": 20,
        },
      ],
    }
  }
>
  <div
    aria-label="Shipping Methods"
    className="o-form"
  >
    <div
      className="o-form__header"
    >
      <div>
        <h2>
          Your Shipping Method
        </h2>
      </div>
      <div>
        <undefined />
      </div>
    </div>
    <div>
      <undefined />
    </div>
    <div>
      <form
        className="o-form__wrapper c-shipping-method-list"
      >
        <div
          className="c-shipping-method-list__header u-bold"
        >
          📍 Shipping from ...
          <span
            className="c-shipping-method-list__item-count"
          >
            undefined items
          </span>
        </div>
        <div>
          <div
            aria-label="super_saver"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="1"
            onClick={[Function]}
          >
            <input
              checked={true}
              id="super_saver_1"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="super_saver"
            />
            <label
              htmlFor="super_saver"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                3.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                Super Saver
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="2"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_2"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day"
            />
            <label
              htmlFor="ups_next_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                5.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_next_day_before_noon"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="3"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_next_day_before_noon_3"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_next_day_before_noon"
            />
            <label
              htmlFor="ups_next_day_before_noon"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Next Day Before Noon
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
          <div
            aria-label="ups_same_day"
            className="o-form__input-group c-shipping-method-list__input-group"
            key="4"
            onClick={[Function]}
          >
            <input
              checked={false}
              id="ups_same_day_4"
              name="shipping_method"
              onChange={[Function]}
              type="radio"
              value="ups_same_day"
            />
            <label
              htmlFor="ups_same_day"
            >
              <span
                className="c-shipping-method-list__cost"
              >
                £
                8.45
              </span>
              <span
                className="c-shipping-method-list__title"
              >
                UPS Same Day
              </span>
              <span
                className="c-shipping-method-list__delivery-date-label"
              >
                Estimated Delivery: 
              </span>
              <span
                className="c-shipping-method-list__delivery-date"
              >
                Sunday 2nd December
              </span>
            </label>
          </div>
        </div>
        <div
          className="o-form__input-group"
        >
          <Button
            aria-label="Continue to payment"
            label="Continue to Payment"
            onClick={[Function]}
            size="lrg"
            status="primary"
            type="submit"
          >
            <button
              aria-label="Continue to payment"
              className="o-button o-button--primary o-button--lrg"
              disabled={false}
              onClick={[Function]}
              role="button"
              tabIndex="0"
              type="submit"
            >
              Continue to Payment
            </button>
          </Button>
        </div>
      </form>
    </div>
  </div>
</ShippingMethods>
`;
